manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: weather-api
  labels:
    name: "weather-api"
    environment: "development"   
     
spec:
  replicas: 2
  selector:
    matchLabels:
      name: weather-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: weather-api
    spec:
      containers:
        - image: ibmdevopsdemo.azurecr.io/weather-api:latest
          name: weather-api
          imagePullPolicy: Always
      restartPolicy: Always
