manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: weather-api-svc
spec:
  selector:
    name: weather-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      # nodePort: 30802
