manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  annotations:
    # use the shared ingress-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-api-service
            port:
              number: 8080
